// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`alarms-list-row-icon Renders \`alarms-list-row-icon\` with all auto instructions 1`] = `
<span
  class="v-tooltip v-tooltip--top"
>
  <transition-stub
    name="slide-y-reverse-transition"
  />
  <span>
    <i
      aria-hidden="true"
      class="v-icon instruction-icon material-icons theme--light black--text"
      style="font-size: 16px;"
    >
      warning
    </i>
  </span>
</span>
`;

exports[`alarms-list-row-icon Renders \`alarms-list-row-icon\` with all auto instructions 2`] = `
<div
  class="v-tooltip__content"
  style="left: 0px; max-width: auto; opacity: 0; top: 12px; z-index: 0; display: none;"
>
  <span>
    All automatic instructions has been executed
  </span>
</div>
`;

exports[`alarms-list-row-icon Renders \`alarms-list-row-icon\` with auto instruction failed 1`] = `
<span
  class="v-tooltip v-tooltip--top"
>
  <transition-stub
    name="slide-y-reverse-transition"
  />
  <span>
    <i
      aria-hidden="true"
      class="v-icon instruction-icon material-icons theme--light black--text error--text"
      style="font-size: 16px;"
    >
      assignment_late
    </i>
  </span>
</span>
`;

exports[`alarms-list-row-icon Renders \`alarms-list-row-icon\` with auto instruction failed 2`] = `
<div
  class="v-tooltip__content"
  style="left: 0px; max-width: auto; opacity: 0; top: 12px; z-index: 0; display: none;"
>
  <span>
    Automatic instructions failed
  </span>
</div>
`;

exports[`alarms-list-row-icon Renders \`alarms-list-row-icon\` with auto instruction running 1`] = `
<span
  class="v-tooltip v-tooltip--top"
>
  <transition-stub
    name="slide-y-reverse-transition"
  />
  <span>
    <i
      aria-hidden="true"
      class="v-icon instruction-icon material-icons theme--light black--text instruction-icon--auto-running"
      style="font-size: 16px;"
    >
      assignment
    </i>
  </span>
</span>
`;

exports[`alarms-list-row-icon Renders \`alarms-list-row-icon\` with auto instruction running 2`] = `
<div
  class="v-tooltip__content"
  style="left: 0px; max-width: auto; opacity: 0; top: 12px; z-index: 0; display: none;"
>
  <span>
    Automatic instruction in progress
  </span>
</div>
`;

exports[`alarms-list-row-icon Renders \`alarms-list-row-icon\` with instruction 1`] = `
<span
  class="v-tooltip v-tooltip--top"
>
  <transition-stub
    name="slide-y-reverse-transition"
  />
  <span>
    <i
      aria-hidden="true"
      class="v-icon instruction-icon material-icons theme--light black--text"
      style="font-size: 16px;"
    >
      assignment
    </i>
  </span>
</span>
`;

exports[`alarms-list-row-icon Renders \`alarms-list-row-icon\` with instruction 2`] = `
<div
  class="v-tooltip__content"
  style="left: 0px; max-width: auto; opacity: 0; top: 12px; z-index: 0; display: none;"
>
  <span>
    There is an instruction for this type of incidents
  </span>
</div>
`;

exports[`alarms-list-row-icon Renders \`alarms-list-row-icon\` with manual instruction running 1`] = `
<span
  class="v-tooltip v-tooltip--top"
>
  <transition-stub
    name="slide-y-reverse-transition"
  />
  <span>
    <i
      aria-hidden="true"
      class="v-icon instruction-icon material-icons theme--light black--text instruction-icon--auto-running"
      style="font-size: 16px;"
    >
      assignment
    </i>
  </span>
</span>
`;

exports[`alarms-list-row-icon Renders \`alarms-list-row-icon\` with manual instruction running 2`] = `
<div
  class="v-tooltip__content"
  style="left: 0px; max-width: auto; opacity: 0; top: 12px; z-index: 0; display: none;"
>
  <span>
    Manual instruction in progress
  </span>
</div>
`;

exports[`alarms-list-row-icon Renders \`alarms-list-row-icon\` with manual instruction waiting result 1`] = `
<span
  class="v-tooltip v-tooltip--top"
>
  <transition-stub
    name="slide-y-reverse-transition"
  />
  <span>
    <i
      aria-hidden="true"
      class="v-icon instruction-icon material-icons theme--light black--text instruction-icon--auto-running"
      style="font-size: 16px;"
    >
      assignment
    </i>
  </span>
</span>
`;

exports[`alarms-list-row-icon Renders \`alarms-list-row-icon\` with manual instruction waiting result 2`] = `
<div
  class="v-tooltip__content"
  style="left: 0px; max-width: auto; opacity: 0; top: 12px; z-index: 0; display: none;"
>
  <span>
    Awaiting for the instruction to complete
  </span>
</div>
`;
